Created attachment 84089 [details] File to reproduce the bug Attached you find a document. How to reproduce the crash: 1. Open attached document 2. On the fourth line, there is a green script field, marked with *** 3. Double click this field. A Script editor apears. 4. Klick on the "<--" button in this dialog. 5. Libreoffice crashs!
I cannot trigger the script editor on OS X or don't see any "<--" button. Which Windows are you using.
Created attachment 84091 [details] Instructions
Please see "Instructions.png" for details
Comment on attachment 84089 [details] File to reproduce the bug Mimetype fixed
On pc Debian x86-64 with master sources updated today or with 4.0.3 Debian testing LO package, each time with a brand new LO profile, I don't reproduce this. Stefan: for the test, could you rename your LO directory profile and give it a new try? (see https://wiki.documentfoundation.org/UserProfile)
Ok, done. C:\Users\myuser\AppData\Roaming\LibreOffice renamed, then tested again. Crash again!
OS is Windows 8. But same thing on Windows 7, Windows Vista and Windows XP. Also tested with Windows 2008 Server and Windows 2012 Server. Always same result. This is a Windows only bug.
Thank you Stefan for your feedback, I put it back to unconfirmed since I've got no more questions.
Hi, I can confirm this behaviour: Platform: Vista-32b LibO: Version: 4.1.1.2 Build ID: 7e4286b58adc75a14f6d83f53a03b6c11fa2903 Crash as said in the initial procedure, even with a new profile So I put it New Regards
Hello Reproduced with windows 7 & Version: 4.1.2.1 Build ID: bf15ac65c2167fb1ef3daf3710609d4a4c369a9 Regards Pierre-Yves
Is it possible someone retrieve a backtrace by following this link? (https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#Windows:_How_to_get_a_backtrace)
Any update with last stable LO version 4.2.5? If needed, here's an updated link to retrieve a backtrace on Windows: (last link about https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#Windows:_How_to_get_a_backtrace
Created attachment 112809 [details] "Kundenzahlungen" crash backtrace with LO 4.4.0 on Win7 x64.txt
Looks like it started from 4.0 because 3.6.7.2 was OK. Regression? Happens both on Windows and Linux. Reproduce on 4.4.0. Previously added backtrace for the "file to reproduce a bug".
Caolán McNamara committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=38a65f76bc944ea730ebac7640dc135248ec3da0 Resolves: fdo#68137 crash in traversing script fields It will be available in 4.5.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Caolán McNamara committed a patch related to this issue. It has been pushed to "libreoffice-4-3": http://cgit.freedesktop.org/libreoffice/core/commit/?id=9980636a5c3a499c299a8b6f4b93965f18bb4311&h=libreoffice-4-3 Resolves: tdf#68137 crash in traversing script fields It will be available in 4.3.7. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Caolán McNamara committed a patch related to this issue. It has been pushed to "libreoffice-4-4": http://cgit.freedesktop.org/libreoffice/core/commit/?id=224c65a22b580c6acd09aced71483177d2a9fbd7&h=libreoffice-4-4 Resolves: tdf#68137 crash in traversing script fields It will be available in 4.4.1. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.