Resolves: fdo#68137 crash in traversing script fields

use the same guards as the SwFldEditDlg does

Change-Id: I7d135cf969d9925cec57a90ef0fba8fe40f664eb